# ostt

./: .all-contributorsrc  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  README.md
.github/workflows/: all-contributors.yml  release.yml
Formula/: ostt.rb
environments/hyprland/: README.md  ostt-float.sh
src/config/: file.rs
src/transcription/api/: deepgram.rs
