[package]
name = "ostt"
version = "0.0.3"
edition = "2021"
description = "Open Speech-to-Text recording tool with real-time volume metering and transcription"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/kristoferlund/ostt"
homepage = "https://github.com/kristoferlund/ostt"

[dependencies]
# Terminal UI
ratatui = "0.29.0"
crossterm = "0.28.1"
cliclack = "0.3.0"
console = "0.15.8"
ctrlc = "3.5.1"
tui-input = "0.14.0"

# Audio capture and processing
cpal = "0.16.0"
hound = "3.5.1"

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Config and serialization
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.12"
dirs = "6.0.0"
anyhow = "1.0.86"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
tracing-appender = "0.2.3"

# API calls for transcription
reqwest = { version = "0.12.24", features = ["json", "multipart"] }
urlencoding = "2.1.3"

# Database for history
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
signal-hook = "0.3.18"

# Unix system calls (Linux-only for ALSA warning suppression)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "s"
strip = true

# Metadata for cargo-dist
[package.metadata.dist]
tap = "kristoferlund/ostt"
